[tool.poetry]
name = "check-var"
version = "0.1.0"
description = ""
authors = ["huypn12"]
readme = "README.md"
packages = [{include = "check-var"}]

[tool.poetry.dependencies]
python = "^3.10"
pymupdf = "1.24.10"
pandas = "2.2.2"
tables = "3.10.1"
sqlalchemy = "2.0.34"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"